# quickfix

./: .gitignore  CMakeLists.txt  configure.ac
CerebralEdge/: CMakeLists.txt  main.cpp
m4/: ax_cxx_compile_stdcxx.m4
src/C++/: config.h
